--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,13 +112,13 @@ input, select, textarea {
 /* Type */
 
 	html {
-		font-size: 16pt;
+		font-size: 17pt;
 	}
 
 		@media screen and (max-width: 1680px) {
 
 			html {
-				font-size: 14pt;
+				font-size: 16pt;
 			}
 
 		}
@@ -126,7 +126,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			html {
-				font-size: 12pt;
+				font-size: 14pt;
 			}
 
 		}
@@ -134,14 +134,14 @@ input, select, textarea {
 		@media screen and (max-width: 360px) {
 
 			html {
-				font-size: 10pt;
+				font-size: 12pt;
 			}
 
 		}
 
 	body, input, select, textarea {
 		color: #ffffff;
-		font-family: "Jetbrains Mono", sans-serif;
+		font-family: 'JetBrains Mono', monospace;
 		font-weight: 300;
 		font-size: 1rem;
 		line-height: 1.65;
@@ -262,7 +262,7 @@ input, select, textarea {
 	code {
 		background: rgba(255, 255, 255, 0.075);
 		border-radius: 4px;
-		font-family: "Courier New", monospace;
+		font-family: 'JetBrains Mono', monospace;
 		font-size: 0.9rem;
 		margin: 0 0.25rem;
 		padding: 0.25rem 0.65rem;
@@ -270,7 +270,7 @@ input, select, textarea {
 
 	pre {
 		-webkit-overflow-scrolling: touch;
-		font-family: "Courier New", monospace;
+		font-family: 'JetBrains Mono', monospace;
 		font-size: 0.9rem;
 		margin: 0 0 2rem 0;
 	}
@@ -1724,4 +1724,26 @@ input, select, textarea {
 	left: 0;
 	width: 100%;
 	height: 100%;
+  }
+
+  pre {
+	font-family: 'JetBrains Mono', monospace;
+	overflow-x: auto;
+	white-space: pre; /* wrap long lines */
+	word-wrap: normal; /* force word wrap if needed */
+	background: #1e1e1e;
+	color: #f8f8f2;
+	padding: 1rem;
+	border-radius: 8px;
+  }
+
+/* Style the container to control the appearance */
+.code-container {
+	width: 100%;                /* Adjust to container's width */
+	max-width: 1600px;           /* Optional: Set a max width */
+	overflow-x: auto;           /* Allow horizontal scrolling if code overflows */
+	padding: .25rem;              /* Add padding around the code */
+	margin: 1rem 0;             /* Add margin for spacing */
+	background-color: #363636;  /* Optional: Set background color */
+	border-radius: 8px;         /* Optional: Round corners */
   }
