--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,6 +183,10 @@ input, select, textarea {
 		letter-spacing: 0.2rem;
 	}
 
+	h1{
+		text-align: center;
+	}
+
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 			color: inherit;
 			text-decoration: none;
@@ -1693,13 +1697,13 @@ input, select, textarea {
   }
   
   .software-icons img:hover {
-	transform: scale(1.1);
+	transform: scale(1.25);
 	filter: brightness(1.2);
   }
   .centered-text {
     text-align: center;
     font-size: 1rem; /* Adjust size if needed */
-    margin-bottom: 20px; /* Adds space between text and icons */
+    margin-bottom: 5px; /* Adds space between text and icons */
 }
 
 .responsive-img {
@@ -1747,3 +1751,78 @@ input, select, textarea {
 	background-color: #363636;  /* Optional: Set background color */
 	border-radius: 8px;         /* Optional: Round corners */
   }
+
+.handle {
+  display: inline-block;
+  background-color: #1e1e1e;
+  color: #00fff2;
+  font-family: JetBrains Mono Nerd Font;
+  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5rem;
+  opacity: 0.85;
+
+  margin-bottom: 1rem;
+}
+
+.youtube-link {
+  color: #ff8282;
+  font-weight: 700;
+  text-decoration: none;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+.youtube-link::after {
+  content: ' 🏔️'; /* play button symbol */
+  color: #ff3b3b;
+  position: absolute;
+  right: -20px;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: opacity 0.3s ease, right 0.3s ease;
+}
+
+.youtube-link:hover {
+  color: #ff3b3b;
+  animation: pulse 1s infinite;
+}
+
+.youtube-link:hover::after {
+  opacity: 1;
+  right: -40px;
+  animation: bounce 0.6s infinite;
+}
+
+@keyframes pulse {
+  0%, 100% {
+    text-shadow: 0 0 8px #ff3b3b;
+  }
+  50% {
+    text-shadow: 0 0 20px #ff4d4d;
+  }
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-50%) translateY(0);
+  }
+  50% {
+    transform: translateY(-50%) translateY(-5px);
+  }
+}
+h1 span {
+  display: inline-block;
+  transition: transform 0.3s ease, text-shadow 0.3s ease;
+  cursor: default;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.274); /* subtle glow */
+}
+
+h1 span:hover {
+  transform: translateY(-10px);
+  text-shadow:
+    0 0 8px rgba(255, 255, 255, 1),
+    0 0 15px rgba(255, 255, 255, 0.8),
+    0 0 20px rgba(255, 255, 255, 0.6);
+}
